@startuml

title __JOHNYTECH6's Class Diagram__\n

  namespace io.github.johnytech6 {
    interface io.github.johnytech6.DndPlayer {
        {abstract} + addPotionEffect()
        {abstract} + getChairPosition()
        {abstract} + getCheckpoint()
        {abstract} + getLocation()
        {abstract} + getName()
        {abstract} + getPlayer()
        {abstract} + getUniqueId()
        {abstract} + hasChair()
        {abstract} + hasCheckpoint()
        {abstract} + hasPotionEffect()
        {abstract} + isVerbose()
        {abstract} + removePotionEffect()
        {abstract} + sendMessage()
        {abstract} + sendTitle()
        {abstract} + setChairPosition()
        {abstract} + setCheckpoint()
        {abstract} + setGameMode()
        {abstract} + setVerbose()
        {abstract} + teleport()
        {abstract} + toString()
    }
  }
  

  namespace io.github.johnytech6 {
    class io.github.johnytech6.JohnytechPlugin {
        {static} - pluginInstance : Plugin
        + onDisable()
        + onEnable()
        - registerCommand()
        - registerListener()
    }
  }
  

  namespace io.github.johnytech6 {
    class io.github.johnytech6.OfflineDndPlayer {
        - offlinePlayerRef : OfflinePlayer
        + OfflineDndPlayer()
        + getName()
        + getUniqueId()
        + wasDm()
    }
  }
  

  io.github.johnytech6.JohnytechPlugin -up-|> org.bukkit.plugin.java.JavaPlugin
  io.github.johnytech6.JohnytechPlugin o-- io.github.johnytech6.Handler.PluginHandler : pluginHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
